--- a/新建文本文档.html
+++ b/新建文本文档.html
@@ -5,8 +5,8 @@
 	<title>Document</title>
 	<style>
 		#adb{
-			width:500px;
-			height:500px;
+			width:100%;
+			height:800px;
 			/*background-color: yellow;*/
 		}
 	</style>
